@@ -18,7 +18,10 @@ export * from './treeitems/TreeItemContextMenu';
 export * from './treeitems/TreeItemContextMenu.types';
 export * from './treeitems/TreeItemContextMenuContribution';
 export * from './treeitems/TreeItemContextMenuContribution.types';
+export * from './treeitems/filterTreeItem';
 export * from './views/ExplorerView';
+export * from './views/ExplorerViewConfiguration';
+export * from './views/ExplorerViewConfiguration.types';
+export * from './views/TreeConverter.types';
 export * from './views/TreeView';
 export * from './views/TreeView.types';
-export * from './treeitems/filterTreeItem';
